--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,16 @@
+# ignore intellij folder
+.idea/
+*.iml
+*.ipr
+*.iws
+
+# Mac OS X
+.DS_Store
+*.swp
+
+# build file
+out
+
 # Compiled class file
 *.class
 
